--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ a:link, a:visited, a:hover, a:active {
 body {
   color: #4C4C6D;
   font-family: "Noto Sans KR", sans-serif;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .wrap .popup-on {
@@ -76,7 +76,7 @@ body {
 }
 
 .wrap .header-wrapper {
-  border: 2px solid black;
+  border: 1px solid #777;
   height: 50px;
   background-color: #B8DFD8;
 }
@@ -138,7 +138,7 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   height: 32px;
-  border: 1px solid black;
+  border: 1px solid #777;
   padding: 0;
   border-radius: 0.5em;
 }
@@ -147,7 +147,7 @@ body {
   width: 280px;
   height: 30px;
   border: none;
-  border-radius: 0.5em;
+  border-radius: 0.5em 0 0 0.5em;
   padding-left: 0.5em;
 }
 
@@ -180,7 +180,8 @@ body {
 
 .wrap .center-wrapper .side-wrapper {
   position: relative;
-  border: 2px solid black;
+  border: 1px solid #777;
+  border-top: 0;
   width: 180px;
   height: 100%;
   background-color: white;
@@ -254,7 +255,7 @@ body {
   flex-wrap: wrap;
   width: 102%;
   margin: 0 auto;
-  padding: 30px 30px;
+  padding: 32px;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content {
@@ -268,7 +269,7 @@ body {
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
-  font-size: 1.125em;
+  font-size: 1em;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .i-wrap {
@@ -370,6 +371,15 @@ body {
   display: none;
   max-height: 90vh;
   overflow-y: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.popup-wrap::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
 }
 
 .popup-wrap .write-popup {
@@ -457,34 +467,46 @@ body {
 }
 
 .popup-wrap .view-popup {
-  padding: 0.5em;
   display: none;
 }
 
-.popup-wrap .view-popup div:not(.button-wrap) {
-  margin: 1em 0;
-  display: block;
-  border-bottom: 1px solid black;
-  padding: 1em 0;
+.popup-wrap .view-popup .header {
+  background-color: #B8DFD8;
+  height: 2.5em;
+  font-weight: bold;
   display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
+  justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
   flex-direction: row;
+  padding: 0.5em;
+  color: #4C4C6D;
+  border: 1px solid #777;
 }
 
-.popup-wrap .view-popup div:not(.button-wrap) span {
-  font-size: 1.25em;
-  padding-right: 0.625em;
+.popup-wrap .view-popup .content {
+  padding: 0.5em;
+}
+
+.popup-wrap .view-popup .content table {
+  width: 100%;
+  text-align: center;
+  min-height: 10em;
+  border-spacing: 0px;
+  border-collapse: separate;
+  margin-bottom: 1em;
+}
+
+.popup-wrap .view-popup .content table tr td {
+  padding: 0;
+  border: 1px solid #555;
+}
+
+.popup-wrap .view-popup .content table tr td:nth-child(1) {
+  width: 30%;
   font-weight: bold;
-}
-
-.popup-wrap .view-popup div:not(.button-wrap) span::after {
-  content: " /";
-}
-
-.popup-wrap .view-popup div:not(.button-wrap) p {
-  font-size: 1.25em;
+  color: #4C4C6D;
+  background-color: #E8F6EF;
 }
 
 .popup-wrap .button-wrap {
@@ -497,7 +519,15 @@ body {
 
 .popup-wrap .button-wrap .popup_button {
   border: 1px solid black;
+  background-color: #B8DFD8;
   font-size: 1.25em;
+  font-weight: 700;
   margin: 0 0.25em;
   cursor: pointer;
+}
+
+.view-button {
+  font-size: 1.5em;
+  cursor: pointer;
+  display: inline;
 }
