--- a/css/main.css
+++ b/css/main.css
@@ -385,7 +385,23 @@ body {
   display: none;
 }
 
+.popup-wrap .write-popup .header {
+  background-color: #B8DFD8;
+  height: 2.5em;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding: 0.5em;
+  color: #4C4C6D;
+  border: 1px solid #777;
+  border-bottom: 0;
+}
+
 .popup-wrap .write-popup form {
+  border: 1px solid #777;
   padding: 0.5em;
 }
 
@@ -522,12 +538,18 @@ body {
   border: 1px solid black;
   background-color: #B8DFD8;
   font-size: 1.25em;
-  font-weight: 700;
+  padding: 0.5em;
+  font-weight: bold;
   margin: 0 0.25em;
   cursor: pointer;
 }
 
-.view-button {
+.popup-wrap .button-wrap .popup_button:active {
+  opacity: 0.7;
+  color: black;
+}
+
+.exit-button {
   font-size: 1.5em;
   cursor: pointer;
   display: inline;
