--- a/sass/main.scss
+++ b/sass/main.scss
@@ -296,9 +296,21 @@ body{
     max-height: 90vh;
     overflow-y: scroll;
     @include scrollNone;
+
     .write-popup{
         display: none;
+        .header{
+            background-color: $headerColor;
+            height: 2.5em;
+            font-weight: bold;
+            @include fx($h:$SB,$v:$CT);
+            padding: 0.5em;
+            color: $fontColor;
+            @include border($px:1px,$color:#777);
+            border-bottom: 0;
+        }
         form{
+            @include border($px:1px,$color:#777);
             padding: 0.5em;
             input,select,textarea{
                 display: block;
@@ -426,16 +438,22 @@ body{
             border: 1px solid black;
             background-color: $headerColor;
             font-size: 1.25em;
-            font-weight: 700;
+            padding: 0.5em;
+            font-weight: bold;
             margin: 0 0.25em;
             cursor: pointer;
+            &:active{
+                
+                opacity: 0.7;
+                color: black;
+            }
         }
     }  
 
 }
 
 ///공용 CSS///
-.view-button{
+.exit-button{
     font-size: 1.5em;
     cursor: pointer;
     display: inline;
