--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,7 @@ body {
   width: 180px;
   height: 100%;
   background-color: white;
+  transition: all 0.5s;
 }
 
 @media screen and (max-width: 992px) {
