--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,10 @@ body {
   font-weight: 500;
 }
 
+.wrap {
+  position: relative;
+}
+
 .wrap .popup-on {
   position: fixed;
   top: 0;
@@ -369,7 +373,7 @@ body {
   width: 90vw;
   background-color: white;
   display: none;
-  max-height: 90vh;
+  max-height: 95vh;
   overflow-y: scroll;
   -ms-overflow-style: none;
   /* IE and Edge */
@@ -382,11 +386,10 @@ body {
   /* Chrome, Safari, Opera*/
 }
 
-.popup-wrap .write-popup {
-  display: none;
-}
-
-.popup-wrap .write-popup .header {
+.popup-wrap .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
   background-color: #B8DFD8;
   height: 2.5em;
   font-weight: bold;
@@ -399,92 +402,105 @@ body {
   color: #4C4C6D;
   border: 1px solid #777;
   border-bottom: 0;
+  z-index: 0;
 }
 
-.popup-wrap .write-popup form {
+.popup-wrap .content-wrap {
+  position: relative;
+  top: 2.5em;
+  z-index: 0;
+}
+
+.popup-wrap .write-popup {
+  display: none;
+}
+
+.popup-wrap .write-popup .content form {
   border: 1px solid #777;
   padding: 1em;
 }
 
-.popup-wrap .write-popup form fieldset {
+.popup-wrap .write-popup .content form fieldset {
   border: 0;
   margin-bottom: 0.5em;
   position: relative;
 }
 
-.popup-wrap .write-popup form fieldset p {
-  color: black;
+.popup-wrap .write-popup .content form fieldset label {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.popup-wrap .write-popup .content form fieldset label p {
+  color: #333;
   font-weight: 500;
   margin-bottom: 0.125em;
 }
 
-.popup-wrap .write-popup form fieldset input {
-  border: 1px solid #777;
+.popup-wrap .write-popup .content form fieldset label .range_desc {
+  font-size: 0.75em;
+  line-height: 1.4em;
+}
+
+.popup-wrap .write-popup .content form fieldset input {
+  border: 1px solid #999;
   height: 30px;
   width: 100%;
 }
 
-.popup-wrap .write-popup form fieldset .date {
+.popup-wrap .write-popup .content form fieldset input:focus {
+  border: 1px solid #000;
+}
+
+.popup-wrap .write-popup .content form fieldset .date {
   position: absolute;
   right: 2%;
   line-height: 30px;
   z-index: 1;
 }
 
-.popup-wrap .write-popup form .selectbox-wrap {
+.popup-wrap .write-popup .content form .selectbox-wrap {
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
   flex-wrap: wrap;
   flex-direction: row;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.875em;
 }
 
-.popup-wrap .write-popup form .selectbox-wrap p {
-  color: black;
+.popup-wrap .write-popup .content form .selectbox-wrap p {
+  color: #333;
   font-weight: 500;
   margin-bottom: 0.125em;
 }
 
-.popup-wrap .write-popup form .selectbox-wrap .selectbox {
-  width: 25%;
+.popup-wrap .write-popup .content form .selectbox-wrap .selectbox {
+  width: 33.333%;
 }
 
-.popup-wrap .write-popup form .selectbox-wrap .selectbox:not(:last-child) {
+.popup-wrap .write-popup .content form .selectbox-wrap .selectbox:not(:last-child) {
   margin-right: 1em;
-  width: calc(25% - 1em);
+  width: calc(33.333% - 1em);
 }
 
-.popup-wrap .write-popup form .selectbox-wrap select {
-  border: 1px solid #555;
+.popup-wrap .write-popup .content form .selectbox-wrap select {
+  border: 1px solid #999;
   width: 100%;
+}
+
+.popup-wrap .write-popup .content form .selectbox-wrap select:focus {
+  border: 1px solid #000;
 }
 
 .popup-wrap .view-popup {
   display: none;
+  height: 50vh;
 }
 
-.popup-wrap .view-popup .header {
-  background-color: #B8DFD8;
-  height: 2.5em;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  padding: 0.5em;
-  color: #4C4C6D;
-  border: 1px solid #777;
-  border-bottom: 0;
-}
-
-.popup-wrap .view-popup .content {
-  padding: 0.5em;
-  border: 1px solid #777;
-}
-
-.popup-wrap .view-popup .content table {
+.popup-wrap .view-popup table {
   width: 100%;
   text-align: center;
   min-height: 10em;
@@ -493,12 +509,12 @@ body {
   margin-bottom: 1em;
 }
 
-.popup-wrap .view-popup .content table tr td {
+.popup-wrap .view-popup table tr td {
   padding: 0;
   border: 1px solid #555;
 }
 
-.popup-wrap .view-popup .content table tr td:nth-child(1) {
+.popup-wrap .view-popup table tr td:nth-child(1) {
   width: 30%;
   font-weight: bold;
   color: #4C4C6D;
@@ -518,7 +534,7 @@ body {
   background-color: #B8DFD8;
   font-size: 1.25em;
   font-weight: bold;
-  margin: 0 0.25em;
+  margin: 0.5em;
   cursor: pointer;
 }
 
