--- a/css/main.css
+++ b/css/main.css
@@ -373,17 +373,7 @@ body {
   width: 90vw;
   background-color: white;
   display: none;
-  max-height: 95vh;
-  overflow-y: scroll;
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.popup-wrap::-webkit-scrollbar {
-  display: none;
-  /* Chrome, Safari, Opera*/
+  border: 1px solid #777;
 }
 
 .popup-wrap .header {
@@ -400,15 +390,25 @@ body {
   flex-direction: row;
   padding: 0 1em;
   color: #4C4C6D;
-  border: 1px solid #777;
-  border-bottom: 0;
-  z-index: 0;
+  border-bottom: 1px solid #777;
+  z-index: 1;
 }
 
 .popup-wrap .content-wrap {
   position: relative;
-  top: 2.5em;
+  padding-top: 2.5em;
   z-index: 0;
+  max-height: calc(95vh - 2.5em);
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.popup-wrap .content-wrap::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
 }
 
 .popup-wrap .write-popup {
@@ -416,7 +416,6 @@ body {
 }
 
 .popup-wrap .write-popup .content form {
-  border: 1px solid #777;
   padding: 1em;
 }
 
@@ -497,10 +496,13 @@ body {
 
 .popup-wrap .view-popup {
   display: none;
-  height: 50vh;
 }
 
-.popup-wrap .view-popup table {
+.popup-wrap .view-popup .content {
+  padding: 0 5em;
+}
+
+.popup-wrap .view-popup .content table {
   width: 100%;
   text-align: center;
   min-height: 10em;
@@ -509,12 +511,12 @@ body {
   margin-bottom: 1em;
 }
 
-.popup-wrap .view-popup table tr td {
+.popup-wrap .view-popup .content table tr td {
   padding: 0;
   border: 1px solid #555;
 }
 
-.popup-wrap .view-popup table tr td:nth-child(1) {
+.popup-wrap .view-popup .content table tr td:nth-child(1) {
   width: 30%;
   font-weight: bold;
   color: #4C4C6D;
