--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   height: 32px;
-  border: 1px solid #777;
+  border: 1px solid #555;
   padding: 0;
   border-radius: 0.5em;
 }
@@ -436,7 +436,7 @@ body {
 .popup-wrap .write-popup .content form fieldset label p {
   color: #333;
   font-weight: 500;
-  margin-bottom: 0.125em;
+  margin-bottom: 0.25em;
 }
 
 .popup-wrap .write-popup .content form fieldset label .range_desc {
@@ -445,7 +445,7 @@ body {
 }
 
 .popup-wrap .write-popup .content form fieldset input {
-  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   height: 30px;
   width: 100%;
 }
@@ -486,7 +486,7 @@ body {
 }
 
 .popup-wrap .write-popup .content form .selectbox-wrap select {
-  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
 }
 
@@ -499,28 +499,36 @@ body {
 }
 
 .popup-wrap .view-popup .content {
-  padding: 0 5em;
+  padding: 0 4em;
+  margin-top: 0.5em;
 }
 
-.popup-wrap .view-popup .content table {
-  width: 100%;
+.popup-wrap .view-popup .content .title {
   text-align: center;
-  min-height: 10em;
-  border-spacing: 0px;
-  border-collapse: separate;
-  margin-bottom: 1em;
-}
-
-.popup-wrap .view-popup .content table tr td {
-  padding: 0;
-  border: 1px solid #555;
-}
-
-.popup-wrap .view-popup .content table tr td:nth-child(1) {
-  width: 30%;
   font-weight: bold;
-  color: #4C4C6D;
-  background-color: #E8F6EF;
+  font-size: 1.75em;
+  margin: 0.5em 0;
+}
+
+.popup-wrap .view-popup .content .info div {
+  margin: 0.25em 0;
+}
+
+.popup-wrap .view-popup .content .info .group1 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.popup-wrap .view-popup .content .info .group1 div {
+  padding-right: 0.5em;
+}
+
+.popup-wrap .view-popup .content .contents {
+  margin-top: 20px;
+  min-height: 50px;
 }
 
 .popup-wrap .button-wrap {
