--- a/css/main.css
+++ b/css/main.css
@@ -500,7 +500,7 @@ body {
 
 .popup-wrap .view-popup .content {
   padding: 0 4em;
-  margin-top: 0.5em;
+  margin: 0.5em 0;
 }
 
 .popup-wrap .view-popup .content .title {
@@ -510,8 +510,9 @@ body {
   margin: 0.5em 0;
 }
 
-.popup-wrap .view-popup .content .info div {
-  margin: 0.25em 0;
+.popup-wrap .view-popup .content .info > div {
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .popup-wrap .view-popup .content .info .group1 {
@@ -527,8 +528,10 @@ body {
 }
 
 .popup-wrap .view-popup .content .contents {
-  margin-top: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 0.5em;
   min-height: 50px;
+  padding: 0.5em;
 }
 
 .popup-wrap .button-wrap {
